seeing if things stop flickering

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -81,42 +81,22 @@
 
 .header-community-link:before {
   content: "Community";
-  height: 29px;
-  display: flex;
-  font-size: 20px;
-  font-weight: 800;
 }
 
 .header-golang-link:before {
   content: "In-toto-golang";
-  height: 29px;
-  display: flex;
-  font-size: 20px;
-  font-weight: 800;
 }
 
 .header-python-link:before {
   content: "In-toto-python";
-  height: 29px;
-  display: flex;
-  font-size: 20px;
-  font-weight: 800;
 }
 
 .header-witness-link:before {
   content: "Witness";
-  height: 29px;
-  display: flex;
-  font-size: 20px;
-  font-weight: 800;
 }
 
 .header-archivista-link:before {
   content: "Archivista";
-  height: 29px;
-  display: flex;
-  font-size: 20px;
-  font-weight: 800;
 }
 
 .header-slack-link:hover {
